--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 							<li><a href="elements.html">Curriculum Vitae</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#https://x.com/_cheis_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#https://www.instagram.com/lleras_sketches/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#https://github.com/j-Lleras" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://x.com/_cheis_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.instagram.com/lleras_sketches/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/j-Lleras" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -48,12 +48,10 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">November, 2024</span>
+									<h2><a href="#">My journey<br />
+									through ART</a></h2>
+									<p>A Lifetime Devoted to Creation: 2D Art, Programming, Video Games, and Storytelling</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
