--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<div id="intro">
 						<h1>Jaime<br />
 						Lleras</h1>
-						<p>Video-Game Developer, Programmer, and 2D Artist Crafting Immersive Worlds</p>
+						<p>Video-Game Developer, Computer Engineer, Programmer, and 2D Artist </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -30,10 +30,10 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">ART</a></li>
-							<li><a href="generic.html">Video Games</a></li>
+						<ul class="links">							
 							<li><a href="elements.html">Curriculum Vitae</a></li>
+							<li><a href="generic.html">Video Games</a></li>
+							<li class="active"><a href="index.html">ART</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/_cheis_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -49,8 +49,7 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">November, 2024</span>
-									<h2><a href="#">My journey<br />
-									through ART</a></h2>
+									<h2><a href="#">My journey</a></h2>
 									<p>A Lifetime Devoted to Creation: 2D Art, Programming, Video Games, and Storytelling</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
