--- a/index.html
+++ b/index.html
@@ -176,7 +176,6 @@
 							</section>
 							<section>
 								<h3>Social</h3>								
-								<li><a href="#" class="icon brands fa-linked-in"><span class="label">Linked-in</span></a></li>
 								<li><a href="https://x.com/_cheis_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.instagram.com/lleras_sketches/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://github.com/j-Lleras" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -186,9 +185,8 @@
 						</section>
 					</footer>
 
-				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; PORTFOLIO </li><li>Original design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; PORTFOLIO </li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
