--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">2019-2021</span>
+										<span class="date">2019 - 2021</span>
 										<h2><a href="#">Secondary Education<br />
 										Excellency Program | Bachillerato</a></h2>
 									</header>
@@ -98,24 +98,24 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<span class="date">2021 - NOW</span>
+										<h2><a href="#">Double Degree<br />
+										Video-Game Developement and Computer Engineering</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>After completing High-School, I entered Universidad Rey Juan Carlos in a 5 year bachelors program composed of other two bachelors combined, Video-Game design and developement and Computer Engeneering.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<span class="date">February - June, 2025</span>
+										<h2><a href="#">Erasmus<br />
+										HEIG-VD, Switzerland</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>I entered the erasmus program on my fourth year of college and got accepted in the HEIG-VD in the francophone part of switzerland. I have yet to go and take part of this oportunity.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
