--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									<header>
 										<span class="date">2019 - 2021</span>
 										<h2><a href="#">Secondary Education<br />
-										Excellency Program | Bachillerato</a></h2>
+										Excellency Program </a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>I enrrolled in an excellency program in my highschool for my latest years of secondary education, the so called 'Bachillerato' in Spain. This programm consists of a more exigent version of the usual and requiers the esposition of an 'Excellency project' at the end.</p>
