--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
 									<header>
 										<h2><a href="#">Skills</a></h2>
 									</header>
-											<ul>												
+											<ul class="alt">												
 												<li>Programming: C, C++, C#</li>
 												<li>Group leadership, Project Management</li>
 												<li>HW description: VHDL<br /></li>
 											</ul><header>
 												<h2><a href="#">Languajes</a></h2>
-											</header><ul>
+											</header><ul class="alt">
 												<li>Spanish: Native</li>
 												<li>English: B2</li>
 												<li>French: B2</li>
