--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 					<nav id="nav">
 						<ul class="links">							
 							<li ><a href="index.html">Curriculum Vitae</a></li>
-							<li><a href="generic.html">ART</a></li>
-							<li><a href="elements.html">Video-Games</a></li>
+							<li><a href="ART.html">ART</a></li>
+							<li><a href="generic.html">Video-Games</a></li>							
+							<li><a href="elements.html">elements</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/_cheis_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
