--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
 									<header>
 										<h2><a href="#">Skills</a></h2>
 									</header>
-											<ul >												
+											<ul text-align: left>												
 												<li>Programming: C, C++, C#</li>
 												<li>Group leadership, Project Management</li>
 												<li>HW description: VHDL<br /></li>
 											</ul><header>
 												<h2><a href="#">Languajes</a></h2>
-											</header><ul >
+											</header><ul text-align: left>
 												<li>Spanish: Native</li>
 												<li>English: B2</li>
 												<li>French: B2</li>
