--- a/generic.html
+++ b/generic.html
@@ -21,9 +21,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Curriculum Vitae</a></li>
-							<li class="active"><a href="generic.html">ART</a></li>
-							<li><a href="elements.html">Video-Games</a></li>
+							<li ><a href="index.html">Curriculum Vitae</a></li>
+							<li><a href="ART.html">ART</a></li>
+							<li class="active"><a href="generic.html">Video-Games</a></li>	
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/_cheis_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
