--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 										Excellency Program </a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>I enrrolled in an excellency program in my highschool for my latest years of secondary education, the so called 'Bachillerato' in Spain. This programm consists of a more exigent version of the usual and requiers the esposition of an 'Excellency project' at the end.</p>
+									<p>I enrrolled in an excellency program in my highschool for my latest years of secondary education, the so called 'Bachillerato' in Spain, and got a 9.06/10. This programm consists of a more exigent version of the usual and requiers the esposition of an 'Excellency project' at the end.</p>
 
 								</article>
 								<article>
@@ -78,17 +78,18 @@
 										"Access Denied"</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>For my project I presented a 2D video-game developed in Unity programmed in C#, with sprites designed by my own hand.</p>
+									<p>For my project I presented a 2D video-game developed in Unity, programmed in C#, with sprites designed by my own hand.</p>
 
 								</article>
 								<article>
 									<header>
 										<span class="date">June, 2021</span>
-										<h2><a href="#">Youth Prize<br />
-										On I+D</a></h2>
+										<h2><a href="https://www.cogitim.es/noticia/el-ies-pintor-antonio-lopez-de-madrid-ganador-en-la-categoria-bachillerato-del-premio-nacional-de-iniciacion-a-la-investigacion-tecnologica-2021#:~:text=Noticias-,El%20IES%20Pintor%20Antonio%20L%C3%B3pez%20de%20Madrid%2C%20ganador%20en%20la,Tecnol%C3%B3gica%202021%20de%20la%20UAITIE">
+											National Award for Initiation<br />
+										into Technological Research</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>After presenting my project I joined forces with two of my classmates whose projects were related to the analisis of global conditions and climate change to present a uniform project to the Youth I+D Contest for High-Schoolers..</p>
+									<p>After presenting my project I joined forces with two of my classmates whose projects were related to the analisis of global conditions and climate change to help them present an uniform project to the National Award for Initiation into Technological Research by the UAITIE.</p>
 
 								</article>
 								<article>
@@ -117,7 +118,7 @@
 											<ul text-align: left>												
 												<li>Programming: C, C++, C#</li>
 												<li>Group leadership, Project Management</li>
-												<li>HW description: VHDL<br /></li>
+												<li>HW: VHDL MIPS<br /></li>
 											</ul><header>
 												<h2><a href="#">Languajes</a></h2>
 											</header><ul text-align: left>
