--- a/index.html
+++ b/index.html
@@ -115,13 +115,14 @@
 									<header>
 										<h2><a href="#">Skills</a></h2>
 									</header>
-											<ul text-align: left>												
+											<ul>												
 												<li>Programming: C, C++, C#</li>
-												<li>Group leadership, Project Management</li>
+												<li>Group leadership </li>
+												<li>Project Management </li>
 												<li>HW: VHDL MIPS<br /></li>
 											</ul><header>
 												<h2><a href="#">Languajes</a></h2>
-											</header><ul text-align: left>
+											</header><ul>
 												<li>Spanish: Native</li>
 												<li>English: B2</li>
 												<li>French: B2</li>
