--- a/index.html
+++ b/index.html
@@ -65,20 +65,20 @@
 									<header>
 										<span class="date">2019 - 2021</span>
 										<h2><a href="#">Secondary Education<br />
-										Excellency Program </a></h2>
+										Excellence Program </a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>I enrrolled in an excellency program in my highschool for my latest years of secondary education, the so called 'Bachillerato' in Spain, and got a 9.06/10. This programm consists of a more exigent version of the usual and requiers the esposition of an 'Excellency project' at the end.</p>
+									<p>I enrolled in an honors program during my final years of secondary education, known as 'Bachillerato de Excelencia' in Spain, and achieved a score of 9.06/10. This program offers a more rigorous curriculum than the standard track and requires the presentation of an 'Excellence Project' at its conclusion.</p>
 
 								</article>
 								<article>
 									<header>
 										<span class="date">June, 2021</span>
-										<h2><a href="#">Excellency Project<br />
+										<h2><a href="#">Excellence Project<br />
 										"Access Denied"</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>For my project I presented a 2D video-game developed in Unity, programmed in C#, with sprites designed by my own hand.</p>
+									<p>For my project, I presented a 2D video game entirely created by me: developed in Unity, programmed in C#, and featuring hand-drawn sprites designed from scratch.</p>
 
 								</article>
 								<article>
@@ -89,31 +89,31 @@
 										into Technological Research</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>After presenting my project I joined forces with two of my classmates whose projects were related to the analisis of global conditions and climate change to help them present an uniform project to the National Award for Initiation into Technological Research by the UAITIE.</p>
+									<p>After presenting my project, I joined forces with two of my classmates whose projects focused on the analysis of global conditions and climate change. Together, we worked on creating a unified project to submit for the National Award for Initiation into Technological Research by the UAITIE.</p>
 
 								</article>
 								<article>
 									<header>
 										<span class="date">2021 - NOW</span>
-										<h2><a href="#">Double Degree<br />
+										<h2><a href="https://www.urjc.es/estudios/doble-grado/663-diseno-y-desarrollo-de-videojuegos-ingenieria-de-computadores">Double Degree<br />
 										Video-Game Developement and Computer Engineering</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>After completing High-School, I entered Universidad Rey Juan Carlos in a 5 year bachelors program composed of other two bachelors combined, Video-Game design and developement and Computer Engeneering.</p>
+									<p>After completing high school, I enrolled at Universidad Rey Juan Carlos in a five-year bachelor’s program that combines two other bachelors: Video Game Design and Development, and Computer Engineering</p>
 
 								</article>
 								<article>
 									<header>
 										<span class="date">February - June, 2025</span>
-										<h2><a href="#">Erasmus<br />
+										<h2><a href="https://heig-vd.ch/">Erasmus<br />
 										HEIG-VD, Switzerland</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>I entered the erasmus program on my fourth year of college and got accepted in the HEIG-VD in the francophone part of switzerland. I have yet to go and take part of this oportunity.</p>
+									<p>In my fourth year of college, I joined the Erasmus program and was accepted into HEIG-VD, located in the French-speaking region of Switzerland. I have yet to go and take advantage of this opportunity.</p>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Skills</a></h2>
+										<h2><a>Skills</a></h2>
 									</header>
 											<ul>												
 												<li>Programming: C, C++, C#</li>
@@ -121,7 +121,7 @@
 												<li>Project Management </li>
 												<li>HW: VHDL MIPS<br /></li>
 											</ul><header>
-												<h2><a href="#">Languajes</a></h2>
+												<h2><a>Languajes</a></h2>
 											</header><ul>
 												<li>Spanish: Native</li>
 												<li>English: B2</li>
