--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<ul class="links">							
 							<li ><a href="index.html">Curriculum Vitae</a></li>
 							<li><a href="ART.html">ART</a></li>
-							<li><a href="generic.html">Video-Games</a></li>							
+							<li><a href="video-games.html">Video-Games</a></li>							
 							<li><a href="elements.html">elements</a></li>
 						</ul>
 						<ul class="icons">
@@ -67,7 +67,7 @@
 										<h2><a href="#">Secondary Education<br />
 										Excellence Program </a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://iespintorantoniolopez.org/ensenanzas/excelencia/" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>I enrolled in an honors program during my final years of secondary education, known as 'Bachillerato de Excelencia' in Spain, and achieved a score of 9.06/10. This program offers a more rigorous curriculum than the standard track and requires the presentation of an 'Excellence Project' at its conclusion.</p>
 
 								</article>
