--- a/ART.html
+++ b/ART.html
@@ -23,7 +23,7 @@
 						<ul class="links">
 							<li><a href="index.html">Curriculum Vitae</a></li>
 							<li class="active"><a href="ART.html">ART</a></li>
-							<li><a href="generic.html">Video-Games</a></li>
+							<li><a href="video-games.html">Video-Games</a></li>
 							
 						</ul>
 						<ul class="icons">
