--- a/index.html
+++ b/index.html
@@ -116,10 +116,11 @@
 										<h2><a>Skills</a></h2>
 									</header>
 											<ul>												
-												<li>Programming: C, C++, C#</li>
+												<li>C, C++, C#</li>
+												<li>VHDL</li>
+												<li>MIPS</li>
 												<li>Group leadership </li>
 												<li>Project Management </li>
-												<li>HW: VHDL MIPS<br /></li>
 											</ul><header>
 												<h2><a>Languajes</a></h2>
 											</header><ul>
