--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 								<article>
 									<header>
 										<span class="date">2019 - 2021</span>
-										<h2><a href="#">Secondary Education<br />
+										<h2><a href="https://iespintorantoniolopez.org/ensenanzas/excelencia/">Secondary Education<br />
 										Excellence Program </a></h2>
 									</header>
-									<a href="https://iespintorantoniolopez.org/ensenanzas/excelencia/" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://iespintorantoniolopez.org/ensenanzas/excelencia/" class="image fit"><img src="images/PAL.jpg" alt="Pintor Antonio López" /></a>
 									<p>I enrolled in an honors program during my final years of secondary education, known as 'Bachillerato de Excelencia' in Spain, and achieved a score of 9.06/10. This program offers a more rigorous curriculum than the standard track and requires the presentation of an 'Excellence Project' at its conclusion.</p>
 
 								</article>
