--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 								<article>
 									<header>
 										<span class="date">June, 2021</span>
-										<h2><a href="#">Excellence Project<br />
+										<h2><a >Excellence Project<br />
 										"Access Denied"</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a  class="image fit"><img src="images/AccessDenied.png" alt="" /></a>
 									<p>For my project, I presented a 2D video game entirely created by me: developed in Unity, programmed in C#, and featuring hand-drawn sprites designed from scratch.</p>
 
 								</article>
@@ -88,7 +88,7 @@
 											National Award for Initiation<br />
 										into Technological Research</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/premio.png" alt="" /></a>
 									<p>After presenting my project, I joined forces with two of my classmates whose projects focused on the analysis of global conditions and climate change. Together, we worked on creating a unified project to submit for the National Award for Initiation into Technological Research by the UAITIE.</p>
 
 								</article>
@@ -98,7 +98,7 @@
 										<h2><a href="https://www.urjc.es/estudios/doble-grado/663-diseno-y-desarrollo-de-videojuegos-ingenieria-de-computadores">Double Degree<br />
 										Video-Game Developement and Computer Engineering</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a  class="image fit"><img src="images/URJC.jpg" alt="" /></a>
 									<p>After completing high school, I enrolled at Universidad Rey Juan Carlos in a five-year bachelor’s program that combines two other bachelors: Video Game Design and Development, and Computer Engineering</p>
 
 								</article>
@@ -108,7 +108,7 @@
 										<h2><a href="https://heig-vd.ch/">Erasmus<br />
 										HEIG-VD, Switzerland</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<a href="https://heig-vd.ch/" class="image fit"><img src="images/heig-vd.jpg" alt="" /></a>
 									<p>In my fourth year of college, I joined the Erasmus program and was accepted into HEIG-VD, located in the French-speaking region of Switzerland. I have yet to go and take advantage of this opportunity.</p>
 								</article>
 								<article>
