--- a/video-games.html
+++ b/video-games.html
@@ -42,12 +42,17 @@
 									<h1>Project Paintball</h1>
 									<p>Dive into the colorful chaos of Project Paintball! This fast-paced indie FPS delivers non-stop fun as you splatter your way to victory. Choose from quirky costumes, unleash unique abilities, and master vibrant, one-of-a-kind maps. Project Paintball is all about creative tactics and hilarious paint-fueled action. Team up or go 1v1—just make sure you're ready to leave your mark in this wildly entertaining paintball showdown!</p>
 								</header>
-								<div href="https://psycoffin-studios.github.io/"  class="image main"><img src="images/pic01.jpg" alt="" /></div>
+								<div href="https://psycoffin-studios.github.io/"  class="image main"><img src="images/paintball_splash.png" alt="" /></div>
 								<p>This video game is part of a project developed for the course 'Games for Web and Social Media,' created in collaboration with five other students under the name Psycoffin Studios. My role in this project included working as a gameplay designer, concept artist, 2D designer, and texture designer.</p>
 								<p>I was responsible for designing the game's characters, maps, and props, ensuring each element aligned with the overall theme and style. </p>
-								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
+								<div class="image main"><img src="images/paintball_characters.png" alt="SplashArt" /></div>								
+								<p>Every aspect of the game is inspired by the concept of a Halloween costume party, where the characters' imaginations run wild as they engage in a fun and friendly paintball match.</p>
+								<div class="image main"><img src="images/caja_sucia.png" alt="Prop design of a dirty futuristic box" /></div>
+								<div class="image main"><img src="images/nave.png" alt="Prop design of an explorers spaceship" /></div>
+								<div class="image main"><img src="images/satélite.png" alt="Prop design of a satelite" /></div>
+								<div class="image main"><img src="images/lápida.png" alt="Prop design of a gravestone" /></div>
 								<p>Additionally, I created the visual identity of the game, including its logos and cover art, to deliver a cohesive and engaging aesthetic that captured the essence of the project. </p>
-								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
+								<div class="image main"><img src="images/paintball_cover" alt="Cover and logos" /></div>
 								<p>We also conceived the game's marketing and monetization strategies, focusing on product placement and partnerships with various paintball companies to feature their brands in our game's maps and items.</p>
 							</section>
 
