--- a/video-games.html
+++ b/video-games.html
@@ -49,10 +49,10 @@
 								<p>Every aspect of the game is inspired by the concept of a Halloween costume party, where the characters' imaginations run wild as they engage in a fun and friendly paintball match.</p>
 								<div class="image main"><img src="images/caja_sucia.png" alt="Prop design of a dirty futuristic box" /></div>
 								<div class="image main"><img src="images/nave.png" alt="Prop design of an explorers spaceship" /></div>
-								<div class="image main"><img src="images/satélite.png" alt="Prop design of a satelite" /></div>
+								<div class="image main"><img src="images/satelite.png" alt="Prop design of a satelite" /></div>
 								<div class="image main"><img src="images/lápida.png" alt="Prop design of a gravestone" /></div>
 								<p>Additionally, I created the visual identity of the game, including its logos and cover art, to deliver a cohesive and engaging aesthetic that captured the essence of the project. </p>
-								<div class="image main"><img src="images/paintball_cover" alt="Cover and logos" /></div>
+								<div class="image main"><img src="images/paintball_cover.png" alt="Cover and logos" /></div>
 								<p>We also conceived the game's marketing and monetization strategies, focusing on product placement and partnerships with various paintball companies to feature their brands in our game's maps and items.</p>
 							</section>
 
