--- a/ART.html
+++ b/ART.html
@@ -58,15 +58,15 @@
 									<h1>Anime Fanarts</h1>
 									<p>Every Life Tells a Unique Story</p>
 								</header>
-								<div class="image main">
+								<div >
 									<img src="images/black clover.png" alt="black clover" />
 									<img src="images/hajime_no_ippo_logo.png" alt="hajime no ippo" />
 									<img src="images/bungou_stray_dogs_color.png" alt="bungou stray dogs" />
 								</div>
 								<p>Anime captivates through its ability to craft unique narratives, turning seemingly ordinary moments—such as a high school volleyball match—into events of profound significance and emotion. Simultaneously, it breathes life into fantastical worlds, making them feel both immersive and familiar. Each story and character unfolds with purpose, offering lessons and perspectives that resonate deeply and linger long after the journey ends.</p>
-									<img src="images/isagi_HS_tinta.jpg" alt="blue lock, isagi ink" />
-									<img src="images/isagi_HS_plano.jpg" alt="blue lock, isagi flat" />
-									<img src="images/isagi_HS_black.jpg" alt="blue lock, isagi full color" />
+								<div class="image main">
+									<img src="images/blue_lock.jpg" alt="blue lock, full process" />
+								</div>
 								<p>One of the anime/manga that has influenced me the most recently is Blue Lock. Beyond its compelling story, which captures the thrill of seizing opportunities in the moment and the importance of striving for one’s goals, it stands out for Yusuke Nomura’s masterful artistry. His work perfectly conveys the raw emotions of the characters—the euphoria, the tension, and the desperation—bringing every moment to life with unparalleled intensity.</p>
 							</section>
 
