--- a/ART.html
+++ b/ART.html
@@ -65,7 +65,7 @@
 								</div>
 								<p>Anime captivates through its ability to craft unique narratives, turning seemingly ordinary moments—such as a high school volleyball match—into events of profound significance and emotion. Simultaneously, it breathes life into fantastical worlds, making them feel both immersive and familiar. Each story and character unfolds with purpose, offering lessons and perspectives that resonate deeply and linger long after the journey ends.</p>
 								<div class="image main">
-									<img src="images/blue_lock.jpg" alt="blue lock, full process" />
+									<img src="images/blue_lock.png" alt="blue lock, full process" />
 								</div>
 								<p>One of the anime/manga that has influenced me the most recently is Blue Lock. Beyond its compelling story, which captures the thrill of seizing opportunities in the moment and the importance of striving for one’s goals, it stands out for Yusuke Nomura’s masterful artistry. His work perfectly conveys the raw emotions of the characters—the euphoria, the tension, and the desperation—bringing every moment to life with unparalleled intensity.</p>
 							</section>
