--- a/ART.html
+++ b/ART.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Video Games - Jaime Lleras</title>
+		<title>ART - Jaime Lleras</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
