--- a/ART.html
+++ b/ART.html
@@ -58,7 +58,7 @@
 									<h1>Anime Fanarts</h1>
 									<p>Every Life Tells a Unique Story</p>
 								</header>
-								<div >
+								<div class="image main">
 									<img src="images/black clover.png" alt="black clover" />
 									<img src="images/hajime_no_ippo_logo.png" alt="hajime no ippo" />
 									<img src="images/bungou_stray_dogs_color.png" alt="bungou stray dogs" />
