--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 						<ul class="links">							
 							<li ><a href="index.html">Curriculum Vitae</a></li>
 							<li><a href="ART.html">ART</a></li>
-							<li><a href="video-games.html">Video-Games</a></li>							
-							<li><a href="elements.html">elements</a></li>
+							<li><a href="video-games.html">Video-Games</a></li>	
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/_cheis_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -53,7 +52,7 @@
 									<h2><a href="#">My journey</a></h2>
 									<p>A Lifetime Devoted to Creation: 2D Art, Programming, Video Games, and Storytelling</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/profile.jpg" alt="Jaime Lleras Pérez" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
@@ -117,6 +116,8 @@
 									</header>
 											<ul>												
 												<li>C, C++, C#</li>
+												<li>Data Structures</li>
+												<li>Programming Patterns</li>
 												<li>VHDL</li>
 												<li>MIPS</li>
 												<li>Group leadership </li>
