--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<h2><a href="#">My journey</a></h2>
 									<p>A Lifetime Devoted to Creation: 2D Art, Programming, Video Games, and Storytelling</p>
 								</header>
-								<a href="#" class="image main"><img src="images/profile.jpg" alt="Jaime Lleras Pérez" /></a>
+								<a href="#" class="image main"><img src="images/perfil.jpg" alt="Jaime Lleras Pérez" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
