--- a/video-games.html
+++ b/video-games.html
@@ -44,7 +44,7 @@
 								<div href="https://cheis-s.itch.io/shogi-for-beginners"  class="image main"><img src="images/Shogi.png" alt="" /></div>
 								<p>This video game was developed as part of the 'Videogame Engineering' course, entirely by myself, utilizing various programming patterns to their full potential. I handled every aspect of the game's development except for the music, which was sourced from a public post on SoundCloud and is properly credited in the game.</p>
 								<p>I was responsible for creating the game's visuals, UI, mechanics, and programming, ensuring each part fit the project's scope and style.</p>
-								<div class="image main"><img src="images/banner.png" alt="Banner" /></div>								
+								<div class="image main"><img src="images/banner.jpg" alt="Banner" /></div>								
 								<p>Every aspect of the game is based on the classic Japanese game but customized for a Western audience, drawing inspiration from its Western counterpart, chess.</p>
 								<div class="image main"><img src="images/screenshot.png" alt="Screenshot" /></div>								
 								</section>
