--- a/video-games.html
+++ b/video-games.html
@@ -42,10 +42,9 @@
 									<p>Step into the captivating world of Shōgi for Beginners, the ultimate digital version of the classic Japanese strategy game. Designed with new players in mind, this game features tutorials, helpful hints, and difficulty levels to guide you every step of the way. Whether you’re a complete novice or looking to have some fun, Shōgi for Beginners makes mastering this timeless board game both fun and accessible. Download now and experience the perfect blend of tradition and innovation!</p>
 								</header>
 								<div href="https://cheis-s.itch.io/shogi-for-beginners"  class="image main"><img src="images/Shogi.png" alt="" /></div>
+								<div class="image main"><img src="images/banner.jpg" alt="Banner" /></div>
 								<p>This video game was developed as part of the 'Videogame Engineering' course, entirely by myself, utilizing various programming patterns to their full potential. I handled every aspect of the game's development except for the music, which was sourced from a public post on SoundCloud and is properly credited in the game.</p>
-								<p>I was responsible for creating the game's visuals, UI, mechanics, and programming, ensuring each part fit the project's scope and style.</p>
-								<div class="image main"><img src="images/banner.jpg" alt="Banner" /></div>								
-								<p>Every aspect of the game is based on the classic Japanese game but customized for a Western audience, drawing inspiration from its Western counterpart, chess.</p>
+								<p>I was responsible for creating the game's visuals, UI, mechanics, and programming, ensuring each part fit the project's scope and style. Every aspect of the game is based on the classic Japanese game but customized for a Western audience, drawing inspiration from its Western counterpart, chess.</p>
 								<div class="image main"><img src="images/screenshot.png" alt="Screenshot" /></div>								
 								</section>
 						<!-- Post -->
