--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 												<li>Group leadership </li>
 												<li>Project Management </li>
 											</ul><header>
-												<h2><a>Languajes</a></h2>
+												<h2><a>Languages</a></h2>
 											</header><ul>
 												<li>Spanish: Native</li>
 												<li>English: B2</li>
