--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">January, 2025</span>
+									<span class="date">March, 2025</span>
 									<h2><a href="#">My journey</a></h2>
-									<p>A Lifetime Devoted to Creation: 2D Art, Programming, Video Games, and Storytelling</p>
+									<p>A Lifetime Devoted to Creation: 2D Art, Programming, Video Games and Storytelling</p>
 								</header>
 								<a href="#" class="image main"><img src="images/perfil.png" alt="Jaime Lleras Pérez" /></a>
 								<ul class="actions special">
@@ -108,14 +108,15 @@
 										HEIG-VD, Switzerland</a></h2>
 									</header>
 									<a href="https://heig-vd.ch/" class="image fit"><img src="images/heig-vd.jpg" alt="" /></a>
-									<p>In my fourth year of college, I joined the Erasmus program and was accepted into HEIG-VD, located in the French-speaking region of Switzerland. I have yet to go and take advantage of this opportunity.</p>
+									<p>In my fourth year of college, I joined the Erasmus program and was accepted into HEIG-VD, located in the French-speaking region of Switzerland.I am currently taking advantage of this opportunity to deepen my knowledge in fields such as system and network management, security (both network and hardware), quantum computing, data analysis, and AI.</p>
 								</article>
 								<article>
 									<header>
 										<h2><a>Skills</a></h2>
 									</header>
 											<ul>												
-												<li>C, C++, C#</li>
+												<li>C, C++, C#, Python</li>
+												<li>SQL</li>
 												<li>Data Structures</li>
 												<li>Programming Patterns</li>
 												<li>VHDL</li>
