--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 					<nav id="nav">
 						<ul class="links">							
 							<li ><a href="index.html">Curriculum Vitae</a></li>
-							<li><a href="ART.html">ART</a></li>
-							<li><a href="video-games.html">Video-Games</a></li>	
+							<!--<li><a href="ART.html">ART</a></li>-->
+							<li><a href="video-games.html">Projects</a></li>	
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/_cheis_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -48,9 +48,9 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">March, 2025</span>
+									<span class="date">June, 2025</span>
 									<h2><a href="#">My journey</a></h2>
-									<p>A Lifetime Devoted to Creation: 2D Art, Programming, Video Games and Storytelling</p>
+									<p>A Lifetime Devoted to Creation: Programming, 2D Art, Video Games and Storytelling</p>
 								</header>
 								<a href="#" class="image main"><img src="images/perfil.png" alt="Jaime Lleras Pérez" /></a>
 								<ul class="actions special">
@@ -108,7 +108,7 @@
 										HEIG-VD, Switzerland</a></h2>
 									</header>
 									<a href="https://heig-vd.ch/" class="image fit"><img src="images/heig-vd.jpg" alt="" /></a>
-									<p>In my fourth year of college, I joined the Erasmus program and was accepted into HEIG-VD, located in the French-speaking region of Switzerland.I am currently taking advantage of this opportunity to deepen my knowledge in fields such as system and network management, security (both network and hardware), quantum computing, data analysis, and AI.</p>
+									<p>In my fourth year of college, I joined the Erasmus program and was accepted into HEIG-VD, located in the French-speaking region of Switzerland.I took advantage of this opportunity to deepen my knowledge in fields such as system and network management, security (both network and hardware), quantum computing, data analysis, or AI, as well as refining my French.</p>
 								</article>
 								<article>
 									<header>
@@ -116,19 +116,19 @@
 									</header>
 											<ul>												
 												<li>C, C++, C#, Python</li>
-												<li>SQL</li>
-												<li>Data Structures</li>
+												<li>Data analysis</li>
+												<li>Network and system management</li>
 												<li>Programming Patterns</li>
-												<li>VHDL</li>
-												<li>MIPS</li>
+												<li>AWS and other cloud services</li>
+												<li>VHDL and MIPS</li>
 												<li>Group leadership </li>
 												<li>Project Management </li>
 											</ul><header>
 												<h2><a>Languages</a></h2>
 											</header><ul>
 												<li>Spanish: Native</li>
-												<li>English: B2</li>
-												<li>French: B2</li>
+												<li>English: Certified B2</li>
+												<li>French: Certified B2</li>
 												<li>Japanese: Studing (N4) </li>
 											</ul>
 	
