--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!---<section>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -160,7 +160,7 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
-						</section>
+						</section> --->
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
@@ -173,7 +173,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">jaime.lleras@gmail.com</a></p>
+								<p><a href="#">jaime.lleras.7@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>								
