--- a/video-games.html
+++ b/video-games.html
@@ -22,8 +22,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li ><a href="index.html">Curriculum Vitae</a></li>
-							<li><a href="ART.html">ART</a></li>
-							<li class="active"><a href="generic.html">Video-Games</a></li>	
+							<!--- <li><a href="ART.html">ART</a></li> --->
+							<li class="active"><a href="generic.html">Projects</a></li>	
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/_cheis_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
